# swagger.yml
@@ -28,11 +28,50 @@ produces:
 
 # Describe your paths here
 paths:
-  # This is a path endpoint. Change it.
+  /forecast:
+    get:
+      operationId: getForecast
+      description: |
+        Access current weather data for any location on Earth including over 200,000 cities! Current weather is frequently updated based on global models and data from more than 40,000 weather stations. Data is available in JSON, XML, or HTML format.
+      parameters:
+        # An example parameter that is in query and is required
+        -
+          name: q
+          in: query
+          description: By city name
+          required: false
+          type: string
+        -
+          name: id
+          in: query
+          description: By city id
+          required: false
+          type: string
+        -
+          name: units
+          in: query
+          description: Standard, metric, and imperial units are available.
+          required: false
+          type: string
+        -
+          name: lang
+          in: query
+          description: You can use lang parameter to get the output in your language.
+          required: false
+          type: string
+      # Expected responses for this operation:
+      responses:
+        # Response code
+        200:
+          description: Successful response
+          # A schema describing your response object.
+          # Use JSON Schema format
+          schema:
+            $ref: '#/definitions/ForecastDataResponse'
   /weather:
     # This is a HTTP operation
     get:
-      operationId: getCurrentWeatherData 
+      operationId: getCurrentWeatherData
       # Describe this verb here. Note: you can use markdown
       description: |
         Access current weather data for any location on Earth including over 200,000 cities! Current weather is frequently updated based on global models and data from more than 40,000 weather stations. Data is available in JSON, XML, or HTML format.
@@ -45,7 +84,7 @@ paths:
           description: By city name
           required: false
           type: string
-        - 
+        -
           name: id
           in: query
           description: By city id
@@ -72,7 +111,7 @@ paths:
           # Use JSON Schema format
           schema:
             $ref: '#/definitions/CurrentWeatherDataResponse'
-              
+
 definitions:
   CurrentWeatherDataResponseWeatherDto:
     type: object
@@ -92,7 +131,8 @@ definitions:
         type: number
         format: double
       pressure:
-        type: integer
+        type: number
+        format: double
       humidity:
         type: integer
       temp_min:
@@ -104,37 +144,40 @@ definitions:
   CurrentWeatherDataResponseWindDto:
     type: object
     properties:
-      speed: 
+      speed:
         type: number
         format: double
       deg:
-        type: integer
-        
+        type: number
+        format: double
+
   CurrentWeatherDataResponseCloudsDto:
     type: object
     properties:
       all:
         type: integer
-        
+
   CurrentWeatherDataResponseRainDto:
     type: object
     properties:
-      3h: 
-        type: integer
-        
+      3h:
+        type: number
+        format: double
+
   CurrentWeatherDataResponseSnowDto:
     type: object
     properties:
       3h:
-        type: integer
-  
+        type: number
+        format: double
+
   CurrentWeatherDataResponseSysDto:
     type: object
     properties:
-      sunrise: 
+      sunrise:
         type: string
         format: timestamp
-      sunset: 
+      sunset:
         type: string
         format: timestamp
   CurrentWeatherDataResponse:
@@ -162,6 +205,36 @@ definitions:
         $ref: '#/definitions/CurrentWeatherDataResponseSnowDto'
       sys:
         $ref: '#/definitions/CurrentWeatherDataResponseSysDto'
-      dt: 
+      dt:
         type: string
         format: timestamp
+  ForecastDataListItemDto:
+    type: object
+    properties:
+      dt:
+        type: string
+        format: timestamp
+      main:
+        $ref: '#/definitions/CurrentWeatherDataResponseMainDto'
+      weather:
+        type: array
+        items:
+          $ref: '#/definitions/CurrentWeatherDataResponseWeatherDto'
+      wind:
+        $ref: '#/definitions/CurrentWeatherDataResponseWindDto'
+      clouds:
+        $ref: '#/definitions/CurrentWeatherDataResponseCloudsDto'
+      rain:
+        $ref: '#/definitions/CurrentWeatherDataResponseRainDto'
+      snow:
+        $ref: '#/definitions/CurrentWeatherDataResponseSnowDto'
+      dt_txt:
+        type: string
+        format: timestamp
+  ForecastDataResponse:
+    type: object
+    properties:
+      list:
+        type: array
+        items:
+          $ref: '#/definitions/ForecastDataListItemDto'
